--- a/css/style.css
+++ b/css/style.css
@@ -524,7 +524,7 @@ small{
     margin-bottom: 5px;
     padding: 0;
     text-align: left;
-    color: var(--light);
+    color: white;
     font-weight: normal;
     text-transform: capitalize;
     transition: .3s;
